--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,278 +1,729 @@
-.main {
-  display: flex;
-  flex-direction: column;
+.home_page {
+	background-image: url(/bg.svg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+}
+
+.heading-home {
+	/* margin: 6rem 5rem 6rem 5rem; */
+	text-align: center;
+	height: 100vh;
+	width: 100%;
+	padding: 10rem;
+}
+
+.heading-1 {
+	font-size: 3rem;
+	font-weight: 700;
+	margin-bottom: 2rem;
+}
+
+.sub-heading-1 {
+	font-size: 1.5rem;
+	font-weight: 700;
+	color: #808080;
+}
+
+.button-0 {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	gap: 1rem;
+	margin-top: 5rem;
+}
+
+.sub-button-0 {
+	width: 25%;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	padding: 1%;
+	gap: 1rem;
+	background: #0d99ff;
+	border: solid 0.25rem #0d99ff;
+	border-radius: 1.25rem;
+	font-size: 1.5rem;
+	font-weight: 700;
+	cursor: pointer;
+}
+
+.sub-button-0 > p {
+	margin: 0;
+}
+.container-1-image {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+}
+.sub-container-1 {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	align-items: flex-start;
+	gap: 4rem;
+
+	padding: 8rem 4rem 0 0;
+}
+
+.sub-2-container-1 {
+	width: 100%;
+	font-weight: bolder;
+	font-size: large;
+	color: #aaa;
+}
+
+.button_group_home {
+	width: 100%;
+	/* display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1rem; */
+	height: 3rem;
+	margin-top: 4rem;
+}
+
+.button_group_home > button {
+	width: 50%;
+	height: 100%;
+	flex-grow: 1;
+	height: 100%;
+	line-height: 1.25rem;
+	margin-left: 0.5rem;
+	margin-right: 0.35rem;
+	padding: 0 1rem 0 1rem;
+	cursor: pointer;
+	width: 25%;
+	border-radius: 0.75rem;
+	font-size: 1.2rem;
+	font-weight: 600;
+	width: 40%;
+}
+
+.button_group_home-1 {
+	background-color: #0d99ff;
+	color: #ffffff;
+	border: solid 4px #0d99ff;
+}
+.button_group_home-2 {
+	color: #ffffff;
+	background: transparent;
+	border: solid 4px #01a99d;
+}
+
+.container-1-heading {
+	font-size: 2rem;
+	color: #7ee687;
+	font-weight: 600;
+}
+
+.container-2 {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: flex-start;
+	gap: 1rem;
+	padding: 9rem;
+}
+.container-2-div {
+	height: 4rem;
+	width: inherit;
+}
+.container-2-heading {
+	font-size: 3.5rem;
+	color: #a026ff;
+	font-weight: 600;
+	margin: 0;
+}
+
+.container-2 > h3 {
+	font-size: 2rem;
+	font-weight: bold;
+	margin: 0;
+}
+.container-2-subheading {
+	font-weight: 600;
+	color: #aaa;
+	margin-bottom: 2rem;
+}
+
+.btn1 {
+	background-color: #a026ff;
+	color: #ffffff;
+	flex-grow: 1;
+	height: 100%;
+	line-height: 1.25rem;
+	margin-left: 0.5rem;
+	margin-right: 0.35rem;
+	min-width: 185px;
+	padding: 0 1rem 0 1rem;
+	cursor: pointer;
+	width: 20%;
+	border: none;
+	border-radius: 0.5rem;
+	font-size: 1.5rem;
+	font-weight: 600;
+}
+.container-3 {
+	/* display:flex;
+  flex-direction: row;
   justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+   */
+	margin-top: 5rem;
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
+.sub-container-3 {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	padding-top: 10rem;
+	padding-left: 5rem;
 }
 
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
+.btn2 {
+	background-color: transparent;
+	border: solid #7ee687 0.1rem;
+	border-radius: 0.75rem;
+	color: rgb(42, 213, 51);
+	font-weight: 600;
+	flex-grow: 1;
+	font-size: 1.25rem;
+	height: 2.25rem;
+	line-height: 1.25rem;
+	margin-left: 0.5rem;
+	margin-right: 0.35rem;
+	min-width: 185px;
+	padding: 0 1rem 0 1rem;
+	transition: 0.3s;
+
+	width: 20%;
+	margin-bottom: 1rem;
 }
 
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
+.container-3-heading {
+	font-size: xxx-large;
+	color: #7ee687;
+	margin-bottom: 0;
 }
 
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
+.sub-container-3 > p {
+	font-weight: 600;
+}
+.container-3-image {
+	/* width:100%; */
+	/* height:90%; */
+	/* height: fit-content;
+  width: fit-content; */
+	width: 90%;
+	height: 100%;
+}
+.container-4 {
+	padding: 8%;
+}
+.container-4-row {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	gap: 3rem;
+	padding: 5rem;
+}
+.sub-1-container-4 {
+	border: solid 1px white;
+	border-radius: 0.75rem;
+}
+.sub-2-container-4 {
+	border: solid 1px white;
+	border-radius: 0.75rem;
+}
+.sub-3-container-4 {
+	border: solid 1px white;
+	border-radius: 0.75rem;
+}
+.container-4-col-1-div-1 {
+	background-image: url('/Rectangle77.png');
+	height: 50%;
+	background-repeat: no-repeat;
+	border-radius: 1rem;
+	background-size: cover;
+}
+.container-4-col-1-div-1-img {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-end;
+	height: 60%;
+	padding: 2rem;
+}
+.container-4-col-1-div-1-2 {
+	height: 40%;
+	font-size: 4.5rem;
+	padding: 0 0 0 20%;
+	font-weight: 600;
+}
+.container-4-col-1-div-2 {
+	height: 40%;
+	padding: 2rem 0 0 1rem;
+}
+.container-4-col-1-div-2 > h2 {
+	margin-bottom: 2rem;
+}
+.container-4-col-1-div-2 > p {
+	color: #aaa;
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  width: var(--max-width);
-  max-width: 100%;
+.container-4-col-1-div-3 {
+	height: 10%;
+	padding-left: 1rem;
+	color: #aaa;
 }
 
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
+.container-4-col-2-div-1 {
+	background-image: url('/Rectangle77.png');
+	height: 50%;
+	background-repeat: no-repeat;
+	border-radius: 1rem;
+	background-size: cover;
+}
+.container-4-col-2-div-1-img {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-end;
+	height: 60%;
+	padding: 2rem;
+}
+.container-4-col-2-div-1-2 {
+	height: 40%;
+	font-size: 4.5rem;
+	font-weight: 600;
+	padding: 0 0 0 20%;
+}
+.container-4-col-2-div-2 {
+	height: 40%;
+	padding: 2rem 0 0 1rem;
+}
+.container-4-col-2-div-2 > h2 {
+	margin-bottom: 2rem;
+}
+.container-4-col-2-div-2 > p {
+	color: #aaa;
+}
+.container-4-col-2-div-3 {
+	height: 10%;
+	padding-left: 1rem;
+	color: #aaa;
+}
+.sub-3-container-4 > div {
+	height: 100%;
+	width: 100%;
+	border-radius: 1rem;
+}
+.sub-3-container-4 > div > img {
+	height: 100%;
+	width: 100%;
+	border-radius: 1rem;
 }
 
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
+@media screen and (min-width: 380px) and (max-width: 576px) {
+	.container-4-row {
+		padding: 25% 5% 0 5%;
+		grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+		gap: 3%;
+	}
+}
+@media screen and (max-width: 576px) {
+	.heading-home {
+		padding: 5rem 0 5rem 0;
+		height: 50vh;
+	}
+	.heading-1 {
+		font-size: 1.1rem;
+	}
+	.sub-heading-1 {
+		font-size: 0.7rem;
+	}
+	.button-0 {
+		margin-top: 3rem;
+	}
+	.sub-button-0 {
+		width: 45%;
+		font-size: 0.8rem;
+		border-radius: 1rem;
+	}
+	.container-2 {
+		padding: 7rem 1rem 7rem 1rem;
+	}
+	.container-2-heading {
+		font-size: 1.2rem;
+	}
+	.container-2-subheading-1 {
+		font-size: 0.8rem;
+	}
+	.container-2-subheading {
+		font-size: 0.6rem;
+	}
+	.container-2-div {
+		height: 1.5rem;
+	}
+	.btn1 {
+		font-size: 1rem;
+	}
+	.container-3 {
+		margin-top: 0;
+	}
+	.sub-container-3 {
+		padding-top: 2rem;
+		padding-left: 0;
+	}
+	.btn2 {
+		height: 1.5rem;
+		font-size: 1rem;
+		border-radius: 0.4rem;
+	}
+	.container-3-heading {
+		margin-bottom: 0;
+		font-size: 1.5rem;
+	}
+	.container-3-image {
+		width: 100%;
+	}
+	.sub-container-3 > p {
+		font-size: 0.8rem;
+	}
+	.container-4 {
+		padding: 0;
+	}
+	.sub-1-container-4 {
+		height: 22rem;
+	}
+	.container-4-col-1-div-1-2 {
+		font-size: 3rem;
+	}
+	.container-4-col-1-div-2 > h2 {
+		font-size: 120%;
+		margin-bottom: 1rem;
+	}
+	.container-4-col-1-div-2 > p {
+		font-size: 80%;
+	}
+	.container-4-col-1-div-2 {
+		padding: 1rem 0 0 1rem;
+	}
+	.container-4-col-1-div-3 {
+		font-size: 0.9rem;
+	}
+	.sub-2-container-4 {
+		height: 22rem;
+	}
+	.container-4-col-2-div-1-2 {
+		font-size: 3rem;
+	}
+	.container-4-col-2-div-2 {
+		padding: 1rem 0 0 1rem;
+	}
+	.container-4-col-2-div-2 > h2 {
+		font-size: 120%;
+		margin-bottom: 0.7rem;
+	}
+	.container-4-col-2-div-2 > p {
+		font-size: 80%;
+	}
+	.container-4-col-2-div-3 {
+		font-size: 0.9rem;
+	}
+	.sub-3-container-4 {
+		width: auto;
+		grid-column: span 2;
+		height: 35rem;
+	}
+	.container-4-col-1-div-1-img {
+		padding: 1rem;
+	}
+	.container-4-col-2-div-1-img {
+		padding: 1rem;
+	}
+	.container-2-row {
+		gap: 0.5rem;
+	}
+	.container-2-heading {
+		font-size: 1.75rem;
+	}
+	.container-2-subheading-1 {
+		font-size: 1.05rem;
+	}
+	.container-2-div {
+		width: 100%;
+	}
+	.btn1 {
+		padding: 0;
+		margin: 0;
+		width: 30%;
+		height: 150%;
+	}
+	.container-1-row {
+		flex-direction: column-reverse;
+	}
+	.container-1-image > img {
+		width: 96%;
+		height: 100%;
+	}
+	.sub-container-1 {
+		gap: 1rem;
+		padding-right: 0;
+		padding-top: 4rem;
+	}
+	.container-1-heading {
+		font-size: 1.2rem;
+	}
+	.sub-2-container-1 {
+		font-size: small;
+	}
+	.button_group_home {
+		margin-top: 0;
+		margin-bottom: 2rem;
+		display: flex;
+		flex-direction: initial;
+	}
+	.button_group_home > button {
+		height: 80%;
+		font-size: inherit;
+	}
 }
 
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
+@media screen and (max-width: 380px) {
+	.container-4-row {
+		padding: 25% 0%;
+		grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+		gap: 3%;
+	}
+
+	.container-4-col-1-div-2 p {
+		line-height: normal;
+	}
+	.sub-1-container-4 {
+		height: 400px;
+	}
+	.sub-2-container-4 {
+		height: 400px;
+	}
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+	.heading-home {
+		padding: 8rem 1rem 8rem 1rem;
+		height: 60vh;
+	}
+	.heading-1 {
+		font-size: 1.7rem;
+	}
+	.sub-heading-1 {
+		font-size: 1.15rem;
+	}
+	.sub-button-0 {
+		width: 40%;
+		font-size: 120%;
+	}
+	.container-1-image > img {
+		height: 100%;
+		width: 100%;
+		margin: 0 0 0 3%;
+	}
+	.sub-container-1 {
+		padding: 15% 5% 15% 5%;
+		gap: 2rem;
+	}
+	.container-1-heading {
+		font-size: 1.5rem;
+	}
+	.sub-2-container-1 {
+		font-size: 1rem;
+	}
+	.button_group_home {
+		margin-top: 0;
+		height: 2rem;
+	}
+	.button_group_home > button {
+		font-size: 0.7rem;
+	}
+	.container-2 {
+		padding: 7rem 2rem 7rem 2rem;
+	}
+	.container-2-heading {
+		font-size: 2.2rem;
+	}
+	.container-2-subheading {
+		font-size: 0.8rem;
+	}
+	.container-2-div {
+		height: 2rem;
+	}
+	.btn1 {
+		font-size: 1.2rem;
+	}
+	.container-2-subheading-1 {
+		font-size: 1.2rem;
+	}
+	.sub-container-3 {
+		padding: 0;
+	}
+	.container-3-heading {
+		font-size: 2.5rem;
+	}
+	.container-3-image {
+		width: 100%;
+	}
+	.container-4 {
+		padding: 1%;
+	}
+	.container-4-row {
+		padding: 10rem 0 5rem 0;
+		gap: 3%;
+	}
+	.container-4-col-1-div-1-2 {
+		font-size: 4rem;
+		padding: 10% 0 0 20%;
+	}
+	.container-4-col-2-div-1-2 {
+		font-size: 4rem;
+		padding: 10% 0 0 20%;
+	}
+	.container-4-col-1-div-1-img {
+		padding: 12%;
+	}
+	.container-4-col-2-div-1-img {
+		padding: 12%;
+	}
 }
 
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
+@media screen and (min-width: 768px) and (max-width: 992px) {
+	.heading-home {
+		padding: 10rem 4rem 8rem 4rem;
+		height: 70vh;
+	}
+	.heading-1 {
+		font-size: 2rem;
+	}
+	.sub-heading-1 {
+		font-size: 1.2rem;
+	}
+	.sub-button-0 {
+		font-size: 1rem;
+		width: 30%;
+	}
+
+	.container-2 {
+		padding: 7rem 4rem 7rem 4rem;
+	}
+	.container-2-heading {
+		font-size: 2rem;
+	}
+
+	.container-2-subheading {
+		font-size: 1rem;
+	}
+	.btn1 {
+		font-size: 1.2rem;
+	}
+	.container-2-div {
+		height: 2.5rem;
+	}
+	.container-2-subheading-1 {
+		font-size: 1.5rem;
+	}
+	.container-1-image {
+		width: 50%;
+	}
+	.container-1-image > img {
+		width: 100%;
+		height: 100%;
+	}
+	.sub-container-1 {
+		padding: 7rem 0 0 0;
+	}
+	.container-1-heading {
+		font-size: 1.2rem;
+	}
+	.sub-2-container-1 {
+		font-size: 0.9rem;
+	}
+	.button_group_home {
+		margin-top: 0;
+	}
+	.container-col-1 {
+		width: 50%;
+	}
+	.sub-container-3 {
+		padding-top: 7rem;
+	}
+
+	.container-4 {
+		padding: 10% 0 0 0;
+	}
+	.container-4-row {
+		gap: 3%;
+		padding: 5%;
+	}
 }
 
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+	.heading-home {
+		padding: 7rem;
+		height: 80vh;
+	}
+	.heading-1 {
+		font-size: 2.5rem;
+	}
+	.sub-heading-1 {
+		font-size: 1.25rem;
+	}
+	.button-0 {
+		margin-top: 4rem;
+	}
+	.sub-button-0 {
+		width: 40%;
+	}
+	.container-1-image > img {
+		height: 80%;
+	}
+	.container-1-heading {
+		font-size: 1.5rem;
+	}
+	.sub-2.container-1 {
+		font-size: 1rem;
+	}
+	.sub-container-1 {
+		padding: 8rem 1rem 0 0;
+	}
+	.container-2 {
+		padding: 9rem 6rem 9rem 6rem;
+	}
+	.container-2-heading {
+		font-size: 2.5rem;
+	}
+	.container-2-subheading {
+		font-size: 0.75rem;
+	}
+	/* .container > div {
+		height: 2.5rem;
+		width: inherit;
+	} */
+	.btn1 {
+		font-size: 1.25rem;
+	}
+	.container-2 > h3 {
+		font-size: 1.5rem;
+	}
+
+	.container-4 {
+		padding: 10% 0 0 0;
+	}
+	.container-4-row {
+		gap: 3%;
+		padding: 5%;
+	}
 }
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
-}
-
-.logo,
-.thirteen {
-  position: relative;
-}
-
-.thirteen {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 75px;
-  height: 75px;
-  padding: 25px 10px;
-  margin-left: 16px;
-  transform: translateZ(0);
-  border-radius: var(--border-radius);
-  overflow: hidden;
-  box-shadow: 0px 2px 8px -1px #0000001a;
-}
-
-.thirteen::before,
-.thirteen::after {
-  content: '';
-  position: absolute;
-  z-index: -1;
-}
-
-/* Conic Gradient Animation */
-.thirteen::before {
-  animation: 6s rotate linear infinite;
-  width: 200%;
-  height: 200%;
-  background: var(--tile-border);
-}
-
-/* Inner Square */
-.thirteen::after {
-  inset: 0;
-  padding: 1px;
-  border-radius: var(--border-radius);
-  background: linear-gradient(
-    to bottom right,
-    rgba(var(--tile-start-rgb), 1),
-    rgba(var(--tile-end-rgb), 1)
-  );
-  background-clip: content-box;
-}
-
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
-}
-
-@media (prefers-reduced-motion) {
-  .thirteen::before {
-    animation: none;
-  }
-
-  .card:hover span {
-    transform: none;
-  }
-}
-
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
-}
-
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo,
-  .thirteen img {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
-}
-
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
+@media screen and (min-width: 1200px) and (max-width: 1400px) {
+	.sub-button-0 {
+		width: 30%;
+	}
 }
